1st Inital commit

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>On-Scroll Image Layout Animations | Codrops</title>
-		<meta name="description" content="An exploration of different scroll based layout switch animations." />
+		<title>Display Art</title>
+		<meta name="description" content="Display Art" />
 		<meta name="keywords" content="" />
-		<meta name="author" content="Codrops" />
+		<meta name="author" content="NFT" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/cch1nog.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
@@ -15,22 +15,11 @@
 	</head>
 	<body class="loading">
 		<main>
-			<div class="frame">
-				<div class="frame__title"> 
-					<h1 class="frame__title-main">On-Scroll Image Layout Animations</h1> 
-					<a aria-label="Back to the article" class="frame__title-back" href="https://tympanus.net/codrops/?p=72941"> 
-						<span class="oh__inner">Back to the article</span> 
-						<svg width="18px" height="18px" viewBox="0 0 24 24"><path vector-effect="non-scaling-stroke" d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"></path>
-						</svg>
-					</a>
-				</div>
-				<a class="frame__prev" href="https://tympanus.net/Development/TextBlockTransitions/">Previous demo</a>
-			</div>
 			<section class="project project--intro">
 				<span class="project__label project__label--name">Project</span>
-				<span class="project__name">AI Art</span>
+				<span class="project__name">Display Art Art</span>
 				<span class="project__label project__label--date">Date</span>
-				<span class="project__date">July, 2023</span>
+				<span class="project__date">November, 2023</span>
 				<h2 class="project__title">
 					<span class="project__title-line">Creativity</span>
 					<span class="project__title-line">Redefined</span>
