--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Display Art</title>
 		<meta name="description" content="Display Art" />
-		<meta name="keywords" content="" />
+		<meta name="keywords" content="NFT, Digital Display, Digital Art, Display" />
 		<meta name="author" content="NFT" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/cch1nog.css">
